--- a/ci/deploy.yml
+++ b/ci/deploy.yml
@@ -10,6 +10,9 @@ image_resource:
 inputs:
 - name: java-buildpack-container-customizer
 
+caches:
+- path: m2
+
 run:
   path: java-buildpack-container-customizer/ci/deploy.sh
 
