--- a/java-buildpack-container-customizer-boot-2/pom.xml
+++ b/java-buildpack-container-customizer-boot-2/pom.xml
@@ -26,7 +26,7 @@
     <parent>
         <groupId>org.cloudfoundry</groupId>
         <artifactId>java-buildpack-container-customizer-parent</artifactId>
-        <version>2.2.0.BUILD-SNAPSHOT</version>
+        <version>2.2.0.RELEASE</version>
     </parent>
 
     <artifactId>java-buildpack-container-customizer-boot-2</artifactId>
