--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 
     <groupId>org.cloudfoundry</groupId>
     <artifactId>java-buildpack-container-customizer-parent</artifactId>
-    <version>2.4.0.BUILD-SNAPSHOT</version>
+    <version>2.4.0.RELEASE</version>
     <packaging>pom</packaging>
 
     <properties>
