Avoid docker rate limiting errors in concourse
    Authenticated pulls of task images. Requires concourse with a security manager enabled and 'docker-username' and 'docker-password' secrets confirgured for the given pipeline.

Signed-off-by: Emily Casey <ecasey@vmware.com>

--- a/ci/deploy.yml
+++ b/ci/deploy.yml
@@ -6,6 +6,8 @@ image_resource:
   source:
     repository: openjdk
     tag: 8-jdk
+    username: ((docker-username))
+    password: ((docker-password))
 
 inputs:
 - name: java-buildpack-container-customizer
